--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@ margin-bottom: 10px;
 direction: rtl;
 table-layout: fixed;
 width: 100%;
+max-width: 1000px;
 font-size: 1.1em;
 }
 th,
@@ -454,6 +455,7 @@ td {
 padding: 4px;
 text-align: center;
 border-bottom: 1px solid var(--border-color);
+border-left: 1px solid var(--border-color);
 }
 th {
 background-color: var(--primary-color);
