--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ width: 18%;
 min-width: 80px;
 max-width: 120px;
 text-align: center;
-font-size: 1em;
+font-size: .8em;
 padding: 5px;
 border-radius: 4px;
 background-color: var(--button-bg);
