--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@ color: #fff;
 font-weight: bold;
 }
 #conjugation-table th {
+    direction: ltr;
     border-bottom: 2px solid #0056b3;
     font-size: 0.8em;
     white-space: nowrap;          
@@ -475,8 +476,41 @@ font-weight: bold;
     text-overflow: ellipsis;      
     max-width: 0;                 
 }
+#conjugation-table td {
+    padding: 4px;
+    text-align: center;
+    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
+    white-space: nowrap;          /* Prevents text from wrapping */
+    overflow: hidden;             /* Hides overflowing content */
+    text-overflow: ellipsis;      /* Adds ellipses when text overflows */
+    max-width: 0;                 /* Enables truncation with table-layout: fixed */
+}
+
+/* Ensure specific columns respect their direction */
+#conjugation-table td:nth-child(3) { /* Transliteration */
+    direction: ltr; /* Keep LTR for English transliteration */
+}
+#conjugation-table td:nth-child(4) { /* Phonetics */
+    direction: ltr; /* Keep LTR for English phonetics */
+}
+#conjugation-table td:nth-child(5) { /* Translation */
+    direction: ltr; /* Keep LTR for English translation */
+}
+#conjugation-table td:nth-child(2) { /* Verb */
+    direction: rtl; /* RTL for Hebrew */
+    white-space: normal;          /* Allow wrapping, no ellipses */
+    overflow: visible;            /* Show full content */
+    text-overflow: clip;          /* No ellipses */
+    max-width: none;              /* Remove truncation limit */
+}
+/* Retain RTL for Hebrew content */
+#conjugation-table td:nth-child(1), /* Pronoun */
+#conjugation-table td:nth-child(2) { /* Verb */
+    direction: rtl; /* Explicitly set RTL, though inherited from table */
+}
 #conjugation-table td:nth-child(2) {
-font-size: 1.3em;
+font-size: 1.2em;
 }
 #conjugation-table td:nth-child(2) a {
 color: inherit;
