--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ body {
     margin-bottom: 10px;
     padding: 1px 4px;
     
+    
 }
 
 #toggle-utilities {
@@ -470,6 +471,10 @@ body.dark-mode input[type="checkbox"]:checked {
     max-height: 300px;
     opacity: 1;
     transition: all 0.3s ease-in;
+    overflow-x: auto;          /* Enable horizontal scrolling */
+    overflow-y: hidden;        /* Prevent vertical scrolling unless needed */
+    white-space: nowrap;       /* Keep content inline to trigger horizontal overflow */
+    max-width: 100%;           /* Ensure it respects parent container width */
 }
 
 #utility-panel.collapsed {
@@ -798,6 +803,7 @@ body.dark-mode .popup {
     .conjugation-link {
         flex-direction: row;
         gap: 5px;
+        flex-wrap: nowrap; 
     }
     select,
     input[type="text"],
